# waveguide

./: .clang-format  .gitignore  .unifyignore  CMakeLists.txt  README.md
src/: wgABC.cu  wgABC.h  wgAllocator.cu  wgAllocator.h  wgCommon.h  wgGrid.h  wgMain.cu  wgOutput.cu  wgOutput.h  wgPlot.cu  wgPlot.h  wgSource.cu  wgSource.h  wgTimer.cu  wgTimer.h  wgUpdateE.cu  wgUpdateE.h  wgUpdateH.cu  wgUpdateH.h
